Organizando os arquivos em pastas

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="alura.svg">
-        <script src="script.js" async></script>
+        <link rel="stylesheet" href="./assets/css/reset.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="icon" href="./assets/img/alura.svg">
+        <script src="./assets/js/script.js" async></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" async></script>
         <title>Calculadora de média</title>
     </head>
     <body>
         <header>
-            <img src="logo-imersao.svg">
+            <img src="./assets/img/logo-imersao.svg">
             <h1>Calculadora de Média</h1>
             <p>A média para ser aprovado é 6.0</p>
         </header>
@@ -43,7 +43,7 @@
             </div>
         </main>
         <footer>
-            <img src="alura.svg">
+            <img src="./assets/img/alura.svg">
         </footer>
     </body>
 </html>
